# Self-LNN

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ZSFWD.md  build.bat  build.sh  fix_backend_bulk.ps1  start.bat  start.sh  test_api_final.ps1  test_api_full.ps1
config/: backend_config.json.example  com.selflnn.slnn.plist.example  robot_saved_config.json  seed_knowledge.json  seed_knowledge.json.bak  slnn.service.example  slnn_windows_service.xml.example  system_config.json  version.h.in
docs/: AGI_Robot_Guide.md  API_REFERENCE_ZH.md  Architecture_Diagram.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE_ZH.md  DEVELOPMENT_GUIDE_ZH.md  Deployment_Ubuntu.md  Embedded_Deployment_Guide.md  Offline_Deployment_Guide.md  Training_Guide.md  USER_GUIDE.md  Ubuntu_Recovery.md  WSL_Network_Troubleshooting.md
frontend/: api-docs.html  api-keys.html  device-control.html  hardware-setup.html  index.html  knowledge-graph.html  multimodal-learn.html  teach.html  (+7 more)
src/agi/: CMakeLists.txt  agi.c  capability_switch.c  task_scheduler.c
src/backend/: CMakeLists.txt  auth.c  backend.c  websocket_push.c
src/base/: CMakeLists.txt  errors.c
src/cognition/: CMakeLists.txt  abstraction.c  bdi_model.c  deep_correction.c  deep_reflection.c  deep_thought_chain.c  metacognition.c  self_cognition.c
src/concurrency/: CMakeLists.txt  lock_free.c  rcu.c  rw_lock_map.c  thread_pool.c
src/core/: CMakeLists.txt  architecture_controller.c  cfc_cell.c  cfc_enhanced.c  cfc_network.c  cma_es.c  decision_engine.c  dynamics.c  errors.c  evolutionary_algorithms.c  extended_training.c  global_config.c  graph_optimization.c  graph_optimization_ext.c  laplace.c  laplace_ai_framework.c  laplace_enhanced.c  laplace_features.c  laplace_fft.c  laplace_integration.c  laplace_unified.c  lnn.c  lnn_layer_norm.c  loss.c  msvc_stubs.c  ode_solvers.c  optimizer.c  parameter_shard.c  quaternion_batchnorm.c  quaternion_cfc.c  quaternion_conv.c  quaternion_enhanced.c  quaternion_lnn.c  quaternion_optimizer.c  selflnn.c  state.c  system_mutex.c  system_scheduler.c  tensor.c  unified_lnn_state.c
src/distributed/: CMakeLists.txt  load_balancer.c  pbft.c
src/evolution/: CMakeLists.txt  evolution_engine.c  neural_architecture_search.c  pareto_optimization.c
src/gpu/: CMakeLists.txt  auto_kernel_optimization.c  gpu.c  gpu_ascend.c  gpu_benchmark.c  gpu_cambricon.c  gpu_cpu.c  gpu_cuda.c  gpu_hardware_detect.c  gpu_intel.c  gpu_internal.h  gpu_memory_pool.c  gpu_metal.c  gpu_npu.c  gpu_opencl.c  gpu_rocm.c  gpu_tpu.c  gpu_vulkan.c  npu.c  npu_common.c  npu_common.h  npu_internal.h
src/knowledge/: CMakeLists.txt  api_training.c  auto_learning.c  cfc_knowledge_embedding.c  graph_query.c  graph_reasoning.c  graph_storage.c  knowledge.c  knowledge_graph.c  knowledge_inference.c  knowledge_integration.c  knowledge_self_check.c  knowledge_version.c  logic_reasoning.c  ontology_engineering.c  semantic_network.c  semantic_parsing.c  skill_library.c  uncertainty_reasoning.c
src/learning/: CMakeLists.txt  exploration_strategies.c  imitation_deep.c  imitation_learning.c  learning.c  manual_learning.c  meta_learning.c  multi_agent.c  online_learning.c  reinforcement_learning.c  teach_by_showing.c
src/math/: CMakeLists.txt  matrix_ops.c
src/memory/: CMakeLists.txt  episodic.c  long_term.c  memory.c  memory_manager.c  semantic.c  short_term.c  working_memory.c
src/multimodal/: CMakeLists.txt  audio.c  audio_capture.c  audio_loader.c  audio_semantic.c  audio_tools.c  camera_capture.c  cfc_ocr_net.c  character_segmentation.c  data_collection_pipeline.c  deep_vision.c  depth_estimation.c  dialogue.c  dialogue_deep.c  dialogue_memory.c  environment_sound.c  haptic_enhance.c  haptic_learning.c  image_loader.c  image_recognition_deep.c  liquid_vision.c  motor.c  multimodal.c  multimodal_integration.c  multimodal_manager.c  multimodal_teaching.c  multimodal_unified_input.c  object_recognition.c  ocr.c  point_cloud.c  proprioception.c  radar.c  sensor.c  sensor_preprocessor_deep.c  slam.c  slam_backend.c  slam_enhance.c  slam_frontend.c  slam_io.c  slam_loop_closure.c  (+18 more)
src/multisystem/: CMakeLists.txt  multisystem_control.c  swarm_enhanced.c  swarm_intelligence.c
src/product_design/: CMakeLists.txt  product_design.c  product_design_enhanced.c
src/programming/: CMakeLists.txt  c_interpreter.c  programming_bridge.c  programming_enhanced.c  self_programming.c
src/reasoning/: CMakeLists.txt  causal_reasoning.c  cfc_uncertainty_reasoning.c  hierarchical_planning.c  knowledge_snapshot.c  laplace_operator.c  long_term_planning.c  math_physics_reasoning.c  planning.c  planning_enhanced.c  quaternion_liquid_gate.c  reasoning.c  reasoning_internal.c  reasoning_stubs.c  reasoning_version.c
src/robot/: CMakeLists.txt  computer_operation.c  device_protocols.c  dynamics.c  gait_generator.c  gazebo.c  gazebo_bridge.c  hardware_detector.c  hardware_interface.c  hardware_protocols.c  hardware_resource_manager.c  humanoid_sensor_fusion.c  kinematics.c  path_planning.c  physics_engine.c  pybullet_bridge.c  pybullet_interface.c  robot.c  robot_agent.c  robot_calibration.c  robot_control_advanced.c  robot_emergency.c  robot_vision_odometry.c  ros2_node.c  ros_bridge.c  ros_gazebo_bridge.c  ros_node.c  ros_protocol.c  ros_robot_controller.c  sensor_pipeline.c  sensor_simulation.c  simulator.c  swarm_control.c  swarm_coordination.c  voice_motion_control.c
src/safety/: CMakeLists.txt  audit_logger.c  content_filter.c  emergency_stop.c  safety_monitor.c  security_monitor_deep.c
src/training/: CMakeLists.txt  data_loaders.c  dataset_cifar10.c  dataset_mnist.c  distributed_internal.h  distributed_training.c  mixed_precision.c  model_parallel.c  model_registry.c  model_version.c  regularization.c  training.c  training_data_pipeline.c  training_dataset.c  training_enhanced.c  training_monitor.c  training_pipeline.c
src/utils/: CMakeLists.txt  compat_link_stubs.c  config_loader.c  energy_efficiency.c  json_parser.c  logging.c  math_utils.c  memory_utils.c  perf.c  platform.c  secure_random.c  string_utils.c  time_utils.c  xml_parser.c  xorshift_prng.c
(+303 files in other folders)
